Fixed rounded corners showing up on small devices

--- a/static/css/rules.css
+++ b/static/css/rules.css
@@ -103,3 +103,11 @@ input[type=text]:focus {
     background-position: center;
     cursor: pointer;
 }
+
+@media screen and (max-width: 1000px) {
+
+    #content {
+        border-radius: 0;
+    }
+
+}
