--- a/static/css/washboard.css
+++ b/static/css/washboard.css
@@ -23,6 +23,10 @@ input[type=password]:focus {
     outline: none;
 }
 
+.js {
+    cursor: pointer;
+}
+
 .wrapper {
     display: table-row;
     width: 100%;
@@ -155,7 +159,6 @@ input[type=password]:focus {
     margin: 10% auto;
     padding: 40px;
     color: #dce6ef;
-    border-radius: 6px;
 }
 
 @media screen and (max-width: 1000px) {
@@ -168,7 +171,6 @@ input[type=password]:focus {
         -o-box-sizing: border-box;
         box-sizing: border-box;
         padding: 20px;
-        border-radius: 0;
     }
     
     #top #nav,
